force-app/main/default/objects/maica_cc__Funding__c/fields/Funding_Program__c.field-meta.xml
<CustomField>
    <fullName>Funding_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Program</label>
    <referenceTo>Funding_Program__c</referenceTo>
    <relationshipLabel>Fundings</relationshipLabel>
    <relationshipName>Fundings</relationshipName>
    <type>Lookup</type>
</CustomField>