force-app/main/default/objects/maica_cc__Funding__c/fields/Program_Priority__c.field-meta.xml
<CustomField>
    <fullName>Program_Priority__c</fullName>
    <formula>Funding_Program__r.Priority__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>