force-app/main/default/objects/maica_cc__Funding__c/fields/Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Agreement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>maica_cc__Service_Agreement__c.maica_cc__Funding_Type__c</field>
            <operation>equals</operation>
            <value>Block Funded</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>maica_cc__Service_Agreement__c</referenceTo>
    <relationshipLabel>Funding Sources</relationshipLabel>
    <relationshipName>Funding</relationshipName>
    <type>Lookup</type>
</CustomField>